vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__wait_missing_semicolon.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "$crate :: parser :: test_utils :: render_recovery(code, & tree, & diags)"
---
== source ==
wait

== tree ==
WaitStatement
  Keyword(Wait)

== diagnostics ==
1:5 expected ';'
