vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__wait_statement_with_all_parts.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::wait_statement, \"wait on foo until bar for 2 ns;\")"
---
WaitStatement
  Keyword(Wait)
  SensitivityClause
    Keyword(On)
    SensitivityList
      Name
        NameDesignatorPrefix
          Identifier 'foo'
  ConditionClause
    Keyword(Until)
    NameExpression
      Name
        NameDesignatorPrefix
          Identifier 'bar'
  TimeoutClause
    Keyword(For)
    PhysicalLiteralExpression
      PhysicalLiteral
        AbstractLiteral '2'
        Name
          NameDesignatorPrefix
            Identifier 'ns'
  SemiColon
