vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__wait_statement_with_condition.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::wait_statement, \"wait until a = b;\")"
---
WaitStatement
  Keyword(Wait)
  ConditionClause
    Keyword(Until)
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'a'
      EQ
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'b'
  SemiColon
