vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__wait_statement_with_sensitivity_list.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::wait_statement, \"wait on foo, bar;\")"
---
WaitStatement
  Keyword(Wait)
  SensitivityClause
    Keyword(On)
    SensitivityList
      Name
        NameDesignatorPrefix
          Identifier 'foo'
      Comma
      Name
        NameDesignatorPrefix
          Identifier 'bar'
  SemiColon
