vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__wait_statement_with_timeout.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::wait_statement, \"wait for 2 ns;\")"
---
WaitStatement
  Keyword(Wait)
  TimeoutClause
    Keyword(For)
    PhysicalLiteralExpression
      PhysicalLiteral
        AbstractLiteral '2'
        Name
          NameDesignatorPrefix
            Identifier 'ns'
  SemiColon
