vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__sequential_statement__tests__while_loop_statement.snap
---
source: vhdl_syntax/src/parser/productions/sequential_statement.rs
expression: "to_test_text(Parser::loop_statement,\n\"\\\nwhile foo = true loop\n  stmt1;\n  stmt2;\nend loop;\")"
---
LoopStatement
  LoopStatementPreamble
    WhileScheme
      Keyword(While)
      BinaryExpression
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'foo'
        EQ
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'true'
    Keyword(Loop)
  SequenceOfStatements
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt1'
      SemiColon
    ProcedureCallStatement
      Name
        NameDesignatorPrefix
          Identifier 'stmt2'
      SemiColon
  LoopStatementEpilogue
    Keyword(End)
    Keyword(Loop)
    SemiColon
